basic login page and servlet + account class

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <name>amt-project-1 Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://localhost:8080/amt-project-1/</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,10 +45,18 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <finalName>amt-project-1</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+  <!--
+    <distributionManagement>
+      <repository>
+        <id>internal.repo</id>
+        <name>MyCo Internal Repository</name>
+        <url>http://localhost:8080/amt-project-1/</url>
+      </repository>
+    </distributionManagement>
+-->
+    <build>
+      <finalName>amt-project-1</finalName>
+      <pluginManagement>
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
@@ -81,5 +89,6 @@
         </plugin>
       </plugins>
     </pluginManagement>
+
   </build>
 </project>
