--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,13 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>ProfilPageServlet</servlet-name>
+    <servlet-class>presentation.ProfilPageServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProfilPageServlet</servlet-name>
+    <url-pattern>/profil</url-pattern>
+  </servlet-mapping>
+
 </web-app>
