--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
       <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>io.openliberty.tools</groupId>
+          <artifactId>liberty-maven-plugin</artifactId>
+          <version>3.2</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
         </plugin>
