#3 use separate pipeline per branch

--- a/.github/workflows/devs.yml
+++ b/.github/workflows/devs.yml
@@ -1,11 +1,8 @@
-name: Build and publish our Docker image
+name: Build & publish nightly Docker image
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    branches: [ devs ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +28,6 @@ jobs:
         run: |
           echo ${{ secrets.SECRET_KEY }}
           echo ${{ secrets.SECRET_KEY }} | docker login ghcr.io -u Serphentas --password-stdin
-          docker build -t amt-long-du-zboub/amt-project-1 .
-          docker tag amt-long-du-zboub/amt-project-1 ghcr.io/amt-long-du-zboub/amt-project-1
-          docker push ghcr.io/amt-long-du-zboub/amt-project-1
+          docker build -t amt-long-du-zboub/amt-project-1:nightly .
+          docker tag amt-long-du-zboub/amt-project-1 ghcr.io/amt-long-du-zboub/amt-project-1:nightly
+          docker push ghcr.io/amt-long-du-zboub/amt-project-1:nightly
