#3 fix docker package tags

--- a/.github/workflows/devs.yml
+++ b/.github/workflows/devs.yml
@@ -29,5 +29,5 @@ jobs:
           echo ${{ secrets.SECRET_KEY }}
           echo ${{ secrets.SECRET_KEY }} | docker login ghcr.io -u Serphentas --password-stdin
           docker build -t amt-long-du-zboub/amt-project-1:nightly .
-          docker tag amt-long-du-zboub/amt-project-1 ghcr.io/amt-long-du-zboub/amt-project-1:nightly
+          docker tag amt-long-du-zboub/amt-project-1:nightly ghcr.io/amt-long-du-zboub/amt-project-1:nightly
           docker push ghcr.io/amt-long-du-zboub/amt-project-1:nightly
