--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -28,6 +28,6 @@ jobs:
         run: |
           echo ${{ secrets.SECRET_KEY }}
           echo ${{ secrets.SECRET_KEY }} | docker login ghcr.io -u Serphentas --password-stdin
-          docker build -t amt-long-du-zboub/amt-project-1:stable .
-          docker tag amt-long-du-zboub/amt-project-1 ghcr.io/amt-long-du-zboub/amt-project-1:stable
-          docker push ghcr.io/amt-long-du-zboub/amt-project-1:stable
+          docker build -t amt-long-du-zboub/amt-project-1 .
+          docker tag amt-long-du-zboub/amt-project-1 ghcr.io/amt-long-du-zboub/amt-project-1
+          docker push ghcr.io/amt-long-du-zboub/amt-project-1
