--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   db:
     build:
-      context: ./docker/mariadb
+      context: ./docker/images/mariadb
     container_name: codemad_db
     restart: always
     environment:
@@ -10,6 +10,8 @@ services:
       MYSQL_DATABASE: codemad
       MYSQL_USER: codemad-mdus
       MYSQL_PASSWORD: codemad-mdpw
+    ports:
+      - 3306:3306
 
   app:
     # image: ghcr.io/amt-long-du-zboub/amt-project-1
