--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,15 @@
 version: "3.7"
 services:
   db:
-    image: mariadb/server
+    image: ghcr.io/amt-long-du-zboub/amt-project-1/db
     container_name: codemad_db
-    restart: always
-    volumes:
-      - ./docker/images/mariadb/:/docker-entrypoint-initdb.d/
     environment:
       MYSQL_ROOT_PASSWORD: codemad-mdpw
-      MYSQL_DATABASE: codemad
-      MYSQL_USER: codemad-mdus
-      MYSQL_PASSWORD: codemad-mdpw
     ports:
       - 3306:3306
 
   app:
-    # image: ghcr.io/amt-long-du-zboub/amt-project-1
-    build:
-      context: .
+    image: ghcr.io/amt-long-du-zboub/amt-project-1/app
     container_name: codemad_app
     ports:
       - 9080:9080
@@ -27,7 +19,6 @@ services:
   adminer:
     image: adminer
     container_name: codemad_adminer
-    restart: always
     ports:
       - 8080:8080
     environment:
