--- a/docker/topologies/master/docker-compose.yml
+++ b/docker/topologies/master/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: ghcr.io/amt-long-du-zboub/amt-project-1/db
     container_name: codemad_db
     environment:
-      MYSQL_ROOT_PASSWORD: codemad-mdpw
+      MYSQL_ROOT_PASSWORD: codemad
     ports:
       - 3306:3306
 
