--- a/docker/topologies/master/docker-compose.yml
+++ b/docker/topologies/master/docker-compose.yml
@@ -16,11 +16,19 @@ services:
     depends_on:
       - db
 
+  gamification:
+    image: serphentas/amt-project-2
+    container_name: codemad_gamification
+    ports:
+      - 8080:8080
+    depends_on:
+      - db
+
   adminer:
     image: adminer
     container_name: codemad_adminer
     ports:
-      - 8080:8080
+      - 8081:8080
     environment:
       ADMINER_DEFAULT_SERVER: codemad_db
     depends_on:
