--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.13</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20201115</version>
+    </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
