--- a/docker/topologies/master/docker-compose.yml
+++ b/docker/topologies/master/docker-compose.yml
@@ -4,7 +4,8 @@ services:
     image: serphentas/amt-project-1-db
     container_name: codemad_db
     environment:
-      MYSQL_ROOT_PASSWORD: codemad
+      MYSQL_ROOT_PASSWORD: amt
+      MYSQL_USER: amt
     ports:
       - 3306:3306
 
