--- a/docker/topologies/master/docker-compose.yml
+++ b/docker/topologies/master/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.7"
 services:
-  db:
+  codemad-db:
     image: serphentas/amt-project-1-db
     container_name: codemad_db
     environment:
@@ -10,20 +10,22 @@ services:
     ports:
       - 3306:3306
 
-  app:
+  codemad-app:
     image: serphentas/amt-project-1-app
     container_name: codemad_app
     ports:
       - 9080:9080
+    environment:
+      GAMIF_KEY: ${GAMIF_KEY}
     depends_on:
-      - db
+      - codemad-db
 
   adminer:
     image: adminer
     container_name: codemad_adminer
     ports:
-      - 8080:8080
+      - 8081:8080
     environment:
       ADMINER_DEFAULT_SERVER: codemad_db
     depends_on:
-      - db
+      - codemad-db
