--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -37,4 +37,4 @@ jobs:
           echo ${{ secrets.token }} | docker login -u serphentas --password-stdin
           docker build -t serphentas/amt-project-1-db .
           docker push serphentas/amt-project-1-db
-          docket logout
+          docker logout
